- switch to a different Base64 encoder to avoid portability problems - fix encoding of the sha1s, was working on whole chunkData arrays vs. a subset based on bytesRead